--- a/success.html
+++ b/success.html
@@ -11,7 +11,7 @@
     <body>
         <div class="jumbotron jumbotron-fluid">
             <div class="container">
-              <h1 class="display-4">Awesome!</h1>
+              <h1 class="display-4">Success!</h1>
               <p class="lead">You are successfully signed up. Go ahead and look for awesome content!.</p>
             </div>
           </div>
